Beta Stable Commit

--- a/popup.html
+++ b/popup.html
@@ -11,8 +11,11 @@
       <img src="icon-48.png" alt="FormAI Icon">
     </header>
     <main>
+      <div id="username"></div>
+      <button id="signin">Sign In</button>
       <button id="autofill">Auto-Fill Form</button>
       <button id="settings">Settings</button>
+      <button id="signout" style="display:none;">Sign Out</button>
     </main>
     <footer>
       <p>FormAI &copy; 2023</p>
